# rag-sandbox

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
experiments/: run_corrective_rag.py  run_eval.py  run_generate.py  run_hyde.py  run_lightrag.py  run_parent_child.py
scripts/: fetch_qiita.py
src/rag/: __init__.py  chunking.py  corpus.py  embeddings.py  generation.py  metrics.py  rerank.py  store.py
src/rag/graph/: __init__.py  corrective_rag.py
src/rag/kg/: lightrag_store.py
src/rag/retrievers/: __init__.py  bm25.py  dense.py  filtered.py  hybrid.py  hyde.py  multi_query.py  parent_child.py  reranked.py
