[project]
name = "rag-sandbox"
version = "0.1.0"
description = "RAG技術を試すサンドボックス"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # 数値計算・データハンドリング
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
    "scikit-learn>=1.5",
    # Embedding / Reranker（ruri-v3 / bge-m3 / 日本語Reranker）
    "transformers>=4.44",
    "sentence-transformers>=3.0",
    "FlagEmbedding>=1.2",
    # 日本語キーワード検索（BM25 + 形態素解析）
    "fugashi>=1.3",
    "unidic-lite>=1.0.8",
    "rank-bm25>=0.2.2",
    # ベクトル検索
    "faiss-cpu>=1.8",
    # 生成（Ollama）／HyDE の仮回答生成にも利用
    "ollama>=0.3",
    # 能動的検索（Agentic RAG / Self-RAG）
    "langgraph>=1.0",
    "langchain>=1.0",
    "langchain-core>=1.0",
    # 可視化
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.18",
    # Notebook / 進捗
    "jupyterlab>=4.0",
    "ipykernel>=6.29",
    "ipywidgets>=8.1",
    "tqdm>=4.66",
    "joblib>=1.3",
    # PyTorch (CUDA 12.6 対応 wheel)
    "torch>=2.7",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-classic>=1.0.8",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
]

[tool.uv]
default-groups = ["dev"]
# Linux + Python 3.12 環境に絞って解決
# (Windows/macOS用のCUDA wheelは存在しないため)
environments = [
    "sys_platform == 'linux' and python_version == '3.12'",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
